<resources>
    <string name="app_name">VaninoKoleso</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Тест bluetooth</string>
    <string name="title_make_discoverable">Сделать доступным для поиска</string>
    <string name="title_discover_devices">Найти устройства</string>
    <string name="title_tap_to_connect">Устройства найдены. Выберите устройство для подключения.</string>
    <string name="prompt_enter_message">Введите сообщение</string>
    <string name="title_send_message">Отправить сообщение</string>
    <string name="title_message_for_device">Сообщение для отправки выбранному устройству</string>
    <string name="title_message_received">Полученное сообщение</string>
</resources>
