<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true" 
        android:focusableInTouchMode="true" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="discoverDevices"
            android:text="@string/title_discover_devices" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_tap_to_connect" />

        <ListView
            android:id="@id/android:list"
            android:layout_width="fill_parent"
            android:layout_height="120dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_enter_message" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/title_send_message" />

        <EditText
            android:id="@+id/message_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_message_for_device" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_message_received" />

        <TextView
            android:id="@+id/data_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>